# UltraVNC

./: .gitignore  README-parallel-build-and-miscellaneous.txt  UltraVNC-QtCommunityTests.pro
addon/eventMessageLogger/: messages.mc
addon/logger/: logmessages_VC2017.vcxproj
addon/ms-logon/MSLogonACL/: MSLogonACL_VC2017.vcxproj  vncExportACL.cpp  vncExportACL.h  vncImportACL.cpp  vncImportACL.h
addon/ms-logon/authSSP/: GenClientServerContext.cpp  authSSP.cpp  authSSP_VC2017.vcxproj  vncAccessControl.cpp  vncSSP.cpp
addon/ms-logon/authadm/: authadmin_VC2017.vcxproj
addon/ms-logon/ldapauth/: ldapAuth.cpp  ldapAuth.h  ldapauth_VC2017.vcxproj
addon/ms-logon/ldapauth9x/: ldapAuth9x.cpp  ldapAuth9x.h  ldapauth9x_VC2017.vcxproj
addon/ms-logon/ldapauthNT4/: ldapAuthnt4.cpp  ldapAuthnt4.h  ldapauthnt4_VC2017.vcxproj
addon/ms-logon/logging/: logging_VC2017.vcxproj
addon/ms-logon/testauth/: testauth_VC2017.vcxproj
addon/ms-logon/workgrpdomnt4/: workgrpdomnt4.cpp  workgrpdomnt4_VC2017.vcxproj
avilog/avilog/: avilog_VC2017.vcxproj
cmake/: CMakeLists.txt  CMakeLists_libomnithread.txt  CMakeLists_libz.txt  CMakeLists_libzip32.txt  CMakeLists_libzipunzip.txt  readme.txt
cmake/libjpeg/: CMakeLists.txt
cmake/libudt4/: CMakeLists.txt
cmake/libudtcloud/: CMakeLists.txt
cmake/libzstd/: CMakeLists.txt
cmake/uvnc_settings/: CMakeLists.txt
cmake/vnchooks/: CMakeLists.txt
cmake/vncviewer/: CMakeLists.txt
cmake/winvnc/: CMakeLists.txt
common/: Clipboard.cpp  mnemonic.c  stdhdrs.h  win32_helpers.cpp  win32_helpers.h
libjpeg-turbo-win/: CMakeLists.txt  jconfigint.h  libjpeg-turbo-win_VC2017.vcxproj
omnithread/: nt.cpp  nt.h  omnithread.h
rdr/: Exception.h  rdr_VC2017.vcxproj  rdrv12.vcxproj
repeater/: repeater.h  socket_functions.cpp
repeater/webgui/: webio.c  websys.c  websys.h  webtest.c  windowsdefs.h
rfb/: gii.h
setcad/setcad/: setcad_VC2017.vcxproj
setpasswd/setpasswd/: setpasswd_VC2017.vcxproj
udt4/src/: core.cpp  core.h
udt4/win/: udt.vcxproj
uvnc_settings/uvnc_settings/: log.cpp  stdafx.h  upnp.cpp  upnp.h  uvnc_settings.rc
uvnc_settings2/uvnc_settings/: security.cpp  service.cpp  upnp.cpp  upnp.h  uvnc_settings.rc  uvnc_settings_VC2017.vcxproj  vncsetauth.cpp
uvnckeyboardhelper/uvnckeyboardhelper/: targetver.h  uvnckeyboardhelper.cpp  uvnckeyboardhelper.h  uvnckeyboardhelper.rc
vncviewer/: ClientConnection.cpp  ClientConnection.h  ClientConnectionRSAAES.cpp  ClientConnectionTLS.cpp  FileTransfer.cpp  MRU.cpp  MRU.h  SessionDialog.cpp  SessionDialogTabs.cpp  Snapshot.cpp  TextChat.cpp  UltraVNCHelperFunctions.h  VNCOptions.cpp  sessiondialogLoadSave.cpp  stdhdrs.h  vncviewer.cpp  vncviewer.vcxproj  vncviewer_VC2017.vcxproj  vncviewer_vs2017.sln
vncviewer/omnithread/: nt.cpp  omnithread.h
vncviewer/res/: vncviewer.rc
winvnc/createpassword/: createpassword.vcxproj
winvnc/omnithread/: nt.cpp  omnithread.h
winvnc/omnithread/omnithread/: nt.cpp
winvnc/vnchooks/: VNCHooks.cpp  vnchooks_VC2017.vcxproj
winvnc/winvnc/: DeskdupEngine.cpp  Dtwinver.cpp  HideDesktop.cpp  TextChat.cpp  UdpEchoServer.cpp  UltraVNCService.cpp  VirtualDisplay.cpp  benchmark.cpp  black_layered.cpp  cadthread.cpp  service_motor.cpp  stdhdrs.h  videodrivercheck.cpp  vncEncodeTight.cpp  vncEncodeXZ.cpp  vncEncodeXZ.h  vncclient.cpp  vncclient.h  vncencodemgr.h  vncmenu.cpp  vncproperties.cpp  vncpropertiesPoll.cpp  vncserver.cpp  winvnc.cpp  winvnc.rc  winvnc_VC2017.vcxproj
zipunzip_src/unzip/: extract.c
zipunzip_src/unzip/win32/: nt.c  win32.c
zipunzip_src/unzip/windll/: windll.c  windll.h
zipunzip_src/zip20/: zip.c  zipup.c
zipunzip_src/zip20/win32/: nt.c  osdep.h  win32zip.c
zlib/: deflate.c
zlib/arch/x86/: x86.c
